--- a/src/components/sections/Events.astro
+++ b/src/components/sections/Events.astro
@@ -8,20 +8,27 @@ import Btn from "../assets/Btn.astro";
     <h2 class="h4">MARKETS | CHARITY EVENTS | GATHERINGS | CELEBRATIONS</h2>
   </div>
   <div class="desktop_flex">
-    <div class="text_flex">
-      <p>At Contra, we host a mix of events that bring our community together. From cute little markets, to heartfelt Charity Events and cozy Gatherings that spark connection. Everybody is welcome at any time in our home, Contra House.</p>
+    <p>At Contra, we host a mix of events that bring our community together. From cute little markets, to heartfelt Charity Events and cozy Gatherings that spark connection. Everybody is welcome at any time in our home, Contra House.</p>
+    <p>We'd love to see you! Sign up to get friendly updates about upcoming events and gatherings! And don't worry - we won't spam you :)</p>
+    <div class="events_flex">
+      <div class="newsletter_container">
+        <p class="bold text_blue">Sign up for our lovely events!</p>
 
+        <form action="tak.html" name="newsletter" method="post" netlify netlify-honeypot="bot-field">
+          <input type="email" id="email" name="email" placeholder="Write your email..." required />
+
+          <input type="submit" value="Send" />
+        </form>
+      </div>
       <div class="btn_container">
-        <p class="bold text_blue">We will post about upcoming events on our instagram.</p>
-
+        <p class="bold text_blue">We will post about upcoming events on Instagram</p>
         <Btn href="https://www.instagram.com/contra_tattoo_studio/" variant="primary" target="_blank">go to instagram</Btn>
       </div>
     </div>
-    <div class="events_img">
-      <img loading="lazy" src="/event/contra.webp" alt="Contra shop" />
-    </div>
   </div>
-
+  <!--  <div class="events_img">
+      <img loading="lazy" src="/event/contra.webp" alt="Contra shop" />
+    </div> -->
   <style>
     .text_flex {
       display: flex;
@@ -29,13 +36,46 @@ import Btn from "../assets/Btn.astro";
       gap: var(--gap-48);
       margin-bottom: var(--gap-48);
     }
-    .btn_container {
+    .btn_container,
+    .newsletter_container {
       display: flex;
       flex-direction: column;
       gap: var(--gap-16);
       align-items: start;
     }
 
+    input[type="email"] {
+      width: 100%;
+      padding: var(--gap-16);
+
+      display: inline-block;
+      border: 1px solid var(--blue);
+    }
+
+    input[type="submit"] {
+      width: 50%;
+
+      display: inline-block;
+      background-color: var(--blue);
+      color: var(--btn-hover-text);
+      background-color: var(--btn);
+      cursor: pointer;
+      font-family: var(--secondary-header);
+      font-size: var(--xxs-size);
+      font-weight: var(--regular-weight);
+      text-transform: uppercase;
+      border: 1px solid var(--btn);
+      text-decoration: none;
+    }
+    input[type="submit"] :hover {
+      background-color: transparent;
+      color: var(--btn);
+    }
+    form {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
     @media (min-width: 900px) {
       .info {
         max-width: 760px;
@@ -45,9 +85,15 @@ import Btn from "../assets/Btn.astro";
         width: 520px;
         height: auto;
       }
-      .desktop_flex {
+      .events_flex {
         display: flex;
         flex-direction: row;
+        gap: var(--gap-96);
+        align-items: flex-start;
+      }
+      .desktop_flex {
+        display: flex;
+        flex-direction: column;
         gap: var(--gap-48);
       }
     }
