--- a/src/components/sections/Brands.astro
+++ b/src/components/sections/Brands.astro
@@ -91,6 +91,8 @@ const { data } = Astro.props;
   .article_container {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 100vw;
     gap: var(--gap-64);
   }
   .video_container {
