--- a/src/components/sections/Brands.astro
+++ b/src/components/sections/Brands.astro
@@ -81,7 +81,7 @@ const { data } = Astro.props;
   .flex_container2 {
     display: flex;
     flex-direction: row;
-    gap: var(--gap-48);
+    gap: var(--gap-16);
   }
   .afsnit {
     display: flex;
@@ -91,6 +91,7 @@ const { data } = Astro.props;
   .article_container {
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: var(--gap-64);
   }
   .video_container {
@@ -115,15 +116,18 @@ const { data } = Astro.props;
     align-items: center;
     justify-content: center;
   }
-video {
-  max-width: 400px;
-  height: auto;
-}
+  video {
+    max-width: 400px;
+    height: auto;
+  }
   @media (min-width: 900px) {
     .flex_container {
       display: flex;
       flex-direction: row;
       align-items: flex-start;
+    }
+    .flex_container2 {
+      gap: var(--gap-48);
     }
     .article_container {
       max-width: 600px;
