--- a/src/components/sections/Events.astro
+++ b/src/components/sections/Events.astro
@@ -25,16 +25,19 @@ import Btn from "../assets/Btn.astro";
         </form>
       </div>
       <div class="btn_container">
-        <p class="bold text_blue">We will post about upcoming events on our instagram.</p>
-
+        <p class="bold text_blue">We will post about upcoming events on Instagram</p>
         <Btn href="https://www.instagram.com/contra_tattoo_studio/" variant="primary" target="_blank">go to instagram</Btn>
       </div>
     </div>
-    <div class="events_img">
-      <img loading="lazy" src="/event/contra.webp" alt="Contra shop" />
-    </div>
   </div>
-
+  <div class="events_pictures">
+    <img loading="lazy" src="/portraits/event1.webp" alt="Event picture" />
+    <img class="mobil_hide" loading="lazy" src="/portraits/event2.webp" alt="Event picture" />
+    <img class="mobil_hide" loading="lazy" src="/portraits/event3.webp" alt="Event picture" />
+  </div>
+  <!--  <div class="events_img">
+      <img loading="lazy" src="/event/contra.webp" alt="Contra shop" />
+    </div> -->
   <style>
     .text_flex {
       display: flex;
@@ -42,7 +45,8 @@ import Btn from "../assets/Btn.astro";
       gap: var(--gap-48);
       margin-bottom: var(--gap-48);
     }
-    .btn_container {
+    .btn_container,
+    .newsletter_container {
       display: flex;
       flex-direction: column;
       gap: var(--gap-16);
@@ -113,14 +117,27 @@ import Btn from "../assets/Btn.astro";
         max-width: 760px;
         gap: var(--gap-96);
       }
-      .events_img {
-        width: 520px;
-        height: auto;
+
+      .events_flex {
+        flex-direction: row;
+        gap: var(--gap-96);
+        align-items: flex-start;
+        margin-top: none;
       }
       .desktop_flex {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         gap: var(--gap-48);
+      }
+      .events_pictures {
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: var(--gap-16);
+      }
+
+      .events_pictures .mobil_hide {
+        display: block;
       }
     }
   </style>
