--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -76,6 +76,7 @@ const { dat } = Astro.props;
     max-width: 480px;
     min-height: auto;
     z-index: -11;
+    border-radius: 50%;
   }
   .title_video_wrapper {
     display: flex;
