--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -78,6 +78,11 @@ const { dat } = Astro.props;
     z-index: -11;
     border-radius: 50%;
   }
+  video{
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+  }
   .title_video_wrapper {
     display: flex;
     flex-direction: column;
