--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -73,15 +73,14 @@ const { dat } = Astro.props;
     text-transform: uppercase;
   }
   .header_video {
-    max-width: 480px;
-    min-height: auto;
     z-index: -11;
-    border-radius: 50%;
   }
-  video{
-    width: 100%;
-    height: auto;
+  video {
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
     border-radius: 50%;
+    max-width: 480px;
+    height: auto;
   }
   .title_video_wrapper {
     display: flex;
