--- a/src/components/sections/Events.astro
+++ b/src/components/sections/Events.astro
@@ -26,7 +26,7 @@ import Btn from "../assets/Btn.astro";
         </form>
       </div>
       <div class="btn_container">
-        <p class="bold text_blue">We will post about upcoming events on Instagram</p>
+        <p class="bold text_blue short">We will post about upcoming events on Instagram</p>
         <Btn href="https://www.instagram.com/contra_tattoo_studio/" variant="primary" target="_blank">go to instagram</Btn>
       </div>
     </div>
@@ -52,6 +52,9 @@ import Btn from "../assets/Btn.astro";
       flex-direction: column;
       gap: var(--gap-16);
       align-items: start;
+    }
+    .short{
+      max-width: 300px;
     }
 
     input[type="email"] {
@@ -102,6 +105,7 @@ import Btn from "../assets/Btn.astro";
       flex-direction: column;
       align-items: flex-start;
       margin-top: var(--gap-32);
+      gap: var(--gap-48);
     }
     .check {
       padding-left: var(--gap-16);
