--- a/src/components/assets/Navigation.astro
+++ b/src/components/assets/Navigation.astro
@@ -11,7 +11,9 @@ import Link from "../assets/Link.astro";
         </li>
         <li><Link href="#who_section" variant="primary">Who are we?</Link></li>
 
-        <Link href="#header_section" variant="primary"><img src="assets/logo_silver.webp" alt="logo" /></Link>
+        <Link href="#header_section" variant="primary"
+          ><img src="assets/logo_silver.webp" alt="logo" /></Link
+        >
         <li>
           <Link href="#events_section" variant="primary">Our events</Link>
         </li>
@@ -38,7 +40,9 @@ import Link from "../assets/Link.astro";
   </div>
 
   <div class="navigation">
-    <Link href="#header_section" variant="primary"><img src="/assets/logo_silver.webp" alt="logo" /></Link>
+    <Link href="#header_section" variant="primary"
+      ><img src="/assets/logo_silver.webp" alt="logo" /></Link
+    >
     <div class="burger_menu">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -111,7 +115,6 @@ import Link from "../assets/Link.astro";
   }
   .burger_menu {
     display: block;
-    position: absolute;
     cursor: pointer;
     position: relative;
   }
